fix(app): avoid ui-glitch in header on mobile

--- a/frontend/scss/app/index.scss
+++ b/frontend/scss/app/index.scss
@@ -67,7 +67,7 @@ header {
   background-color: $color-red;
 
   .mobile-standalone & {
-    margin-top: 20px;
+    padding-top: 20px;
   }
 }
 
